<resources>
    <string name="app_name">Bunny Clock</string>
    <string name="app_version">Version 1.0.1</string>
    <string name="license_name_title">名称</string>
    <string name="license_title">许可协议</string>
    <string name="license_modify_title">是否经过修改</string>
    <string name="SaveTextParam">SaveTextParam</string>
    <string name="TextColor">TextColor</string>
    <string name="TextSize">TextSize</string>
    <string name="bt_cancel">取消</string>
    <string name="bt_confirm">确定</string>
    <string name="night_color_select">打开取色器</string>
    <string name="day_color_select">打开取色器</string>
    <string name="common_edit_color_select">打开取色器</string>
    <string name="background_edit_color_select">打开取色器</string>
    <string name="night_background_color_select">打开取色器</string>
    <string name="day_background_color_select">打开取色器</string>
    <string name="night_SW_title">自动夜间模式开关</string>
    <string name="night_time_period">夜间模式的时间段(24小时制)</string>
    <string name="night_time_start">从(傍晚)</string>
    <string name="night_time_end">至(早上)</string>
    <string name="time_colon">:</string>
    <string name="time_hour">时</string>
    <string name="time_minute">分</string>
    <string name="night_color_title">夜间模式字体颜色</string>
    <string name="night_background_color_title">夜间模式背景颜色</string>
    <string name="night_background_edit_color_image">夜间模式背景图片</string>
    <string name="night_quote_title">夜间模式文案内容(不能为空)</string>
    <string name="day_color_title">非夜间模式字体颜色</string>
    <string name="day_background_color_title">非夜间模式背景颜色</string>
    <string name="day_background_edit_color_image">非夜间模式背景图片</string>
    <string name="day_quote_title">非夜间模式文案内容(不能为空)</string>
    <string name="dialog_hint">颜色16进制码(白色示例格式：#FFFFFF，请按格式输入，若不，则要重置软件)</string>
    <string name="dialog_textsize_hint">请输入大于11的数字</string>
    <string name="dialog_quote_text_hint">请输入字符内容</string>
    <string name="dialog_quote_text_size_hint">建议输入12~50的数字</string>
    <string name="dialog_quote_layout_param_hint">请输入处于屏幕分辨率范围的数字</string>
    <string name="common_select_color">选择颜色(禁止选择100%透明度 "#00******"，否则会出错)</string>
    <string name="background_select_color">选择颜色(禁止选择100%透明度 "#00******"，否则会出错)</string>
    <string name="save_night_setting">保存</string>
    <string name="night_SW_tip">(切换后记得保存)</string>
    <string name="day_color_title_text">#ffffffff</string>
    <string name="night_color_title_text">#ffffffff</string>
    <string name="background_edit_color_title_text">#ff000000</string>
    <string name="night_background_color_title_text">#ff000000</string>
    <string name="day_background_color_title_text">#ff000000</string>
    <string name="common_edit_color">设置字体颜色</string>
    <string name="background_edit_color">设置背景颜色</string>
    <string name="background_edit_color_image">设置背景图片</string>
    <string name="background_edit_image_select">选择本地图片</string>
    <string name="common_edit_color_title_text">#ffffffff</string>
    <string name="background_edit_color_SW_tip">设置背景颜色开关</string>
    <string name="background_edit_image_SW_tip">设置背景图片开关</string>
    <string name="day_background_edit_image_SW_tip">设置非夜间背景图片开关</string>
    <string name="night_background_edit_image_SW_tip">设置夜间背景图片开关</string>
    <string name="quote_SW_tip">是否显示文案</string>
    <string name="night_quote_SW_tip">是否显示夜间模式文案</string>
    <string name="day_quote_SW_tip">是否显示非夜间模式文案</string>
    <string name="welcome">欢迎使用Bunny Clock</string>
    <string name="quote_edit_color">设置文案字体颜色</string>
    <string name="night_quote_edit_color">设置夜间模式文案字体颜色</string>
    <string name="day_quote_edit_color">设置非夜间模式文案字体颜色</string>
    <string name="quote_edit_color_title_text">#ffffffff</string>
    <string name="night_quote_edit_color_title_text">#ffffffff</string>
    <string name="day_quote_edit_color_title_text">#ffffffff</string>
    <string name="EditTextSize">设置数字字体大小</string>
    <string name="EditQuoteText">编辑文案内容</string>
    <string name="EditQuoteTextSize">设置文案字体大小</string>
    <string name="AutoNightMode">自动夜间模式</string>
    <string name="EditBackground">设置背景</string>
    <string name="Share">分享</string>
    <string name="MyAboutPage">关于</string>
    <string name="DoNotDisturb">免打扰模式</string>
    <string name="DoNotDisturb_SW_tip">免打扰开关</string>
    <string name="DoNotDisturbTip_ON">开启后，避免弹窗影响。进入软件就会执行保存的设置</string>
    <string name="DoNotDisturbTip_OFF">正常按返回键退出后，自动恢复到开启软件前手机的免打扰模式状态</string>
    <string name="layout_param_X">文案位置横坐标</string>
    <string name="layout_param_Y">文案位置纵坐标</string>
    <string name="clock_layout_param_X">时钟数字位置横坐标</string>
    <string name="clock_layout_param_Y">时钟数字位置纵坐标</string>
    <string name="EditQuoteLayoutParam">设置文案位置</string>
    <string name="EditClockLayoutParam">设置时钟数字位置</string>
    <string name="layout_param_X_tip">距离屏幕左侧边缘的距离</string>
    <string name="layout_param_Y_tip">距离屏幕顶部边缘的距离</string>
    <string name="Set_default">恢复默认</string>
    <string name="clear">清除</string>
    <string name="LayoutParamSettingTip">若设置参数过大，请长按时钟背景，即可回到设置界面继续设置</string>
</resources>