<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <Switch
            android:id="@+id/background_edit_color_SW"
            android:layout_width="58dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:onClick="background_edit_color_SW"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="13sp"
            android:textColor="#FF4A4A"
            android:text="@string/background_edit_color_SW_tip"
            android:layout_marginStart="8dp"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/background_edit_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/background_edit_color"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        />

    <TextView
        android:id="@+id/background_edit_color_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/background_edit_color_title_text"
        android:textSize="12sp"
        android:layout_marginTop="2dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/background_edit_color_select"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:gravity="center"
            android:onClick="background_edit_color_select"
            android:text="@string/background_edit_color_select"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape2"/>

        <View
            android:id="@+id/background_edit_color_select_round"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:onClick="background_edit_color_select_round"
            android:layout_gravity="center"
            android:background="@color/black"
            android:layout_marginTop="5dp"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="10dp" />

    </LinearLayout>

    <View  android:layout_height="0.5dp"
        android:layout_width="match_parent"
        android:background="#0071FE"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <Switch
            android:id="@+id/background_edit_image_SW"
            android:layout_width="58dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:onClick="background_edit_image_SW"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="13sp"
            android:textColor="#FF4A4A"
            android:text="@string/background_edit_image_SW_tip"
            android:layout_marginStart="8dp"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/background_edit_color_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/background_edit_color_image"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        />

        <Button
            android:id="@+id/background_edit_image_select"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:gravity="center"
            android:onClick="background_edit_image_select"
            android:text="@string/background_edit_image_select"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape2"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="410px"
        android:layout_height="195px"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        tools:ignore="ContentDescription" />

    <View  android:layout_height="0.5dp"
        android:layout_width="match_parent"
        android:background="#0071FE"
        />

    </LinearLayout>


</ScrollView>